@@ -1,3 +1,9 @@
+2003-06-05  Julien MOUTTE <julien@moutte.net>
+
+	* src/totem.c: (totem_action_fullscreen_toggle), (show_controls),
+	(on_show_controls1_activate): Fixing the show controls menu item in
+	the righ click menu. It was not handled correctly with fullscreen.
+
 2003-06-05  Bastien Nocera  <hadess@hadess.net>
 
 	* src/bacon-video-widget-gst.c: (bacon_video_widget_open):
